home hero section spacing fix

--- a/public/css/custom-styles.css
+++ b/public/css/custom-styles.css
@@ -1559,6 +1559,10 @@ textarea {
     width: 49%;
 }
 
+/* .home-hero-section .carousel-item {
+    height: 800px !important;
+} */
+
 /* responsive styles */
 @media (max-width: 992px) {
     .hero-section {
